# 3d_animation

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md
shaders/: character.fs  character.vs
src/: assets.cpp  assets.h  graphics.cpp  graphics.h  main.cpp
